--- a/style.css
+++ b/style.css
@@ -193,9 +193,10 @@ BreakPoints
 @media (min-width: 740px) and (max-width:980px) {
     .sobre-container {
         max-width: 720px;
+        
     }
     .sobre-item {
-        width: 340px;
+        max-width: 340px;
     }
 }
 
